feat: add metadata tests

--- a/src/splash-screen/splash.css
+++ b/src/splash-screen/splash.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "interBold";
-  src: url("../fonts/Inter-Bold.ttf");
+  src: url("../public/fonts/Inter-Bold.ttf");
 }
 
 body {
