--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,22 @@
 @font-face {
   font-family: "interBold";
-  src: url("./fonts/Inter-Bold.ttf");
+  src: url("./public/fonts/Inter-Bold.ttf");
 }
 
 @font-face {
   font-family: "interRegular";
-  src: url("./fonts/Inter-Regular.ttf");
+  src: url("./public/fonts/Inter-Regular.ttf");
 }
 
 body {
-  font-family: interRegular -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif;
+  font-family:
+    interRegular -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif;
   margin: 0;
   padding: 0;
 }
